# isogeometric_structural_application

./: CMakeLists.txt  IsogeometricStructuralApplication.py  LICENSE.txt  isogeometric_structural_application.cpp  isogeometric_structural_application.h
custom_conditions/: contact_link_3D_kinematic_linear_isogeometric.cpp  contact_link_3D_kinematic_linear_isogeometric.h  face_load_isogeometric.cpp  face_load_isogeometric.h  face_pressure_isogeometric.cpp  face_pressure_isogeometric.h  line_force_isogeometric.cpp  line_force_isogeometric.cpp.bak  line_force_isogeometric.h  line_force_isogeometric_2d.cpp  line_force_isogeometric_2d.h  line_pressure_isogeometric_2d.cpp  line_pressure_isogeometric_2d.h  master_contact_face_3D_isogeometric.cpp  master_contact_face_3D_isogeometric.h  penalty_stiffness_shell.cpp  penalty_stiffness_shell.h  slave_contact_face_3D_isogeometric.cpp  slave_contact_face_3D_isogeometric.h
custom_elements/: K_L_large_deformation_shell.cpp  K_L_large_deformation_shell.h  K_L_linear_shell.cpp  K_L_linear_shell.h  convective_linear_KL_shell.cpp  convective_linear_KL_shell.h  kinematic_linear_isogeometric.cpp  kinematic_linear_isogeometric.h  kinematic_linear_kirchhoff_love_isogeometric_shell.cpp  kinematic_linear_kirchhoff_love_isogeometric_shell.h  kinematic_linear_kirchhoff_love_isogeometric_shell_rev2.cpp  kinematic_linear_kirchhoff_love_isogeometric_shell_rev2.h  kinematic_linear_kirchoff_love_isogeometric_shell.cpp  kinematic_linear_kirchoff_love_isogeometric_shell.h  kinematic_linear_nurbs.cpp  kinematic_linear_nurbs.h  linear_bending_strip.cpp  linear_bending_strip.h  nonlinear_bending_strip.cpp  nonlinear_bending_strip.h  total_lagrangian_isogeometric.cpp  total_lagrangian_isogeometric.h  unsaturated_soils_element_2phase_small_strain_isogeometric.cpp  unsaturated_soils_element_2phase_small_strain_isogeometric.h
custom_processes/: compute_error_estimate_elasticity_process_isogeometric.h
custom_python/: add_process_to_python.cpp  add_process_to_python.h  add_utilities_to_python.cpp  add_utilities_to_python.h  isogeometric_structural_python_application.cpp
custom_utilities/: isogeometric_contact_utility.h  isogeometric_posteriori_estimator.cpp  isogeometric_posteriori_estimator.h  isotropic_tensor_utility.h
python_scripts/: model_iga_include.py  shell_analysis_strategy.py  structural_solver_isogeometric.py
test_examples/annular_clamped_plate/: annular_clamped_plate.mdpa  annular_clamped_plate.py  annular_clamped_plate.time  annular_clamped_plate_0.post.msh  annular_clamped_plate_0.post.res  annular_clamped_plate_1.post.res  annular_clamped_plate_include.py
test_examples/annular_clamped_plate/withPenaltyMethod/: annular_clamped_plate.mdpa  annular_clamped_plate.py  annular_clamped_plate.time
test_examples/internal_pressurized_cylinder/nurbs/: internal_pressurized_cylinder.py
test_examples/square_KL_shell/: square_KL_shell.mdpa  square_KL_shell.py  square_KL_shell.time  square_KL_shell2.mdpa  square_KL_shell5.mdpa  square_KL_shell6.mdpa  square_KL_shell7.mdpa  square_KL_shell_0.post.msh  square_KL_shell_0.post.res  square_KL_shell_1.post.res  square_KL_shell_4ele.mdpa  square_KL_shell_include.py
test_examples/square_KL_shell/Untitled Folder/: square_KL_shell.mdpa  square_KL_shell.py
test_examples/square_KL_shell/__pycache__/: square_KL_shell1.mdpa  square_KL_shell_2.mdpa
